# ArgoFormatChecker

./: .env.demo.bodc  .env.demo.coriolis  .env.docs  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  compose.yaml  dockerignore  python.Dockerfile  python.README.md  run-file-checker-linux.sh  run-file-checker-windows.bat  sonar-project.properties
.github/workflows/: component-container-image-security.yml  component-container-image.yml  workflow-java.yml  workflow-python.yml
argo-file-checker-python/: Dockerfile  README.md
argo-file-checker-python/argo-file-checker-python-api/: pyproject.toml
argo-file-checker-python/argo-file-checker-python-api/file_checker_api/: app.py
argo-file-checker-python/argofilechecker-python-wrapper/: pyproject.toml
argo-file-checker-python/argofilechecker-python-wrapper/demo_scripts/: demo_docker.py  demo_test.py
argo-file-checker-python/argofilechecker-python-wrapper/demo_scripts/file_checker_spec/: Makefile  argo-b_profile-spec-v3.1.attr_regexp  argo-bio_config_names-spec-v3.1  argo-core_config_names-spec-v3.1  argo-metadata-spec-v3.1.cdl  argo-physical_params-spec-v2.2.aux  argo-physical_params-spec-v3.1  argo-profile-spec-v2.3.cdl  argo-profile-spec-v3.0.attr_regexp  argo-profile-spec-v3.0.cdl  argo-tech_names-spec-v2.3  argo-tech_units-spec-v2.4  argo-technical-spec-v2.3.cdl  argo-technical-spec-v3.1.opt  argo-trajectory-spec-v2.2.cdl  argo-trajectory-spec-v2.3.cdl  generic_template_short_sensor_name  ref_table-25  ref_table-41  ref_table-8
argo-file-checker-python/argofilechecker-python-wrapper/demo_scripts/test_data/2903996/: R2903996_013.nc
argo-file-checker-python/argofilechecker-python-wrapper/src/argofilechecker_python_wrapper/: __init__.py  file_checker.py  models.py
argo-file-checker-python/argofilechecker-python-wrapper/tests/: conftest.py  test_argo_data_validation.py  test_filechecker.py
argo-file-checker-python/argofilechecker-python-wrapper/tests/rejected_argo_data/: 6990728_tech_BadUnits.nc
demo/inputs/2903996/: 2903996_Rtraj.nc  2903996_meta.nc  2903996_tech.nc  R2903996_001.nc  R2903996_001D.nc  R2903996_002.nc  R2903996_003.nc  R2903996_009.nc  R2903996_010.nc  R2903996_011.nc  R2903996_014.nc  R2903996_016.nc  R2903996_017.nc  R2903996_018.nc  R2903996_019.nc  R2903996_023.nc  R2903996_024.nc
demo/inputs/2903996_coriolis/: R2903996_012.nc  R2903996_015.nc  R2903996_020.nc
demo/inputs/3901945/: 3901945_meta.nc  BD3901945_004.nc  D3901945_001D.nc  D3901945_002.nc  D3901945_003.nc  D3901945_004.nc  D3901945_005.nc  D3901945_006.nc  D3901945_007.nc  D3901945_008.nc  D3901945_009.nc  D3901945_010.nc  D3901945_011.nc  D3901945_012.nc  D3901945_013.nc  D3901945_014.nc  D3901945_015.nc  D3901945_016.nc  D3901945_017.nc  D3901945_018.nc  D3901945_019.nc  D3901945_020.nc  D3901945_021.nc  D3901945_022.nc  D3901945_023.nc
file_checker_exec/: .classpath  .gitignore  .project  Dockerfile  Makefile  pom.xml  settings.xml
file_checker_exec/src/: MANIFEST.txt  ResultsFile.java  ValidateSubmit.java  log4j2.xml.debug  log4j2.xml.production  make_exe_jar  set_classpath
file_checker_exec/src/unidata/: README.txt
file_checker_exec/src/usgdac/: ArgoDate.java  (+10 more)
file_checker_exec/test/: DumpTraj.java  TestArgoFileSpecification.java  TestBatteryVars.java  TestGdacFileName.java  TestMFS.java  TestPattern.java  TestPsalStats.java  TestRd1.java  TestReadSection.java  TestReadString.java  TestResultsFile.java  TestResultsFile_FormatInvalid.cdl  TestResultsFile_NotAnArgoFile.cdl  TestTechnicalParam.java  TestWr1.java  TestWr2.java  TestWr3.java  TestWr4.java  Testwr.java
file_checker_python/file_checker_python_api/: pyproject.toml
file_checker_python/file_checker_python_wrapper/: .gitignore  README.md  tox.ini
file_checker_spec/: argo-R03-deprecated-physical_params-spec  argo-b_profile-spec-v3.1.cdl  argo-bio_config_names-spec-v3.1  argo-core_config_names-spec-v3.1  argo-metadata-spec-v3.1.attr_regexp  argo-metadata-spec-v3.1.cdl  argo-metadata-spec-v3.1.opt  argo-physical_params-spec-v2.3  argo-physical_params-spec-v3.0.aux  argo-physical_params-spec-v3.0_dep  argo-physical_params-spec-v3.1  argo-physical_params-spec-v3.2  argo-physical_params-spec-v3.2.aux  argo-profile-spec-v2.2.attr_regexp  argo-profile-spec-v2.2.cdl  argo-profile-spec-v2.3.attr_regexp  argo-profile-spec-v3.1.attr_regexp  argo-profile-spec-v3.1.cdl  argo-tech_names-spec-v2.4  argo-tech_names-spec-v3.0  argo-tech_names-spec-v3.1  argo-tech_names-spec-v3.1.deprecated  argo-tech_names-spec-v3.1_DEP  argo-tech_units-spec-v2.3.deprecated  argo-tech_units-spec-v2.4  argo-tech_units-spec-v2.4.deprecated  argo-tech_units-spec-v3.0.deprecated  argo-technical-spec-v2.2.cdl  argo-technical-spec-v3.1.cdl  argo-trajectory-spec-v2.3.attr_regexp  argo-trajectory-spec-v2.3.opt  argo-trajectory-spec-v3.1.cdl  argo-trajectory-spec-v3.2.cdl  generic_template_cycle_phase_name  generic_template_param  measurement_code-juld_variables  measurement_code-specific_codes._DEP  ref_table-10  ref_table-16  ref_table-19_dep  (+18 more)
file_checker_spec/NVS/: R03.jsonld  R08.jsonld  R14.jsonld  R15.jsonld  R18.jsonld  R23.jsonld  R24.jsonld  R25.jsonld  R26.jsonld  R27.jsonld  R40.jsonld  R41.jsonld  RP2.jsonld  dateOfUpdate.txt
(+210 files in other folders)
