[project]
name = "file-checker-api"
version = "0.0.0"
description = ""
authors = [
    {name = "BODC",email = "enquiries@bodc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "file_checker_api"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"